# implicit-function-playground

./: README.md  pyproject.toml
implicitnet/: plotting.py
notebooks/: 01_function_approximation.ipynb  02_image_approximation.ipynb
